--- a/StackView/StackView/Base.lproj/Main.storyboard
+++ b/StackView/StackView/Base.lproj/Main.storyboard
@@ -49,10 +49,10 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWp-ME-ym4">
-                                <rect key="frame" x="138.33333333333334" y="157.66666666666666" width="113.66666666666666" height="95.666666666666657"/>
+                                <rect key="frame" x="155" y="186.33333333333334" width="80.333333333333314" height="67"/>
                                 <string key="text">Social
 Squid</string>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
